--- a/GUI/main.html
+++ b/GUI/main.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <div class="container">
-	<div class="back row valign-wrapper" style="height: 200px;">
+	<div class="back row valign-wrapper" style="height: 500px;">
 		<div class="play col s12">
 			<div class="col s5 center-align" style="margin: 0 auto !important; float: none;">
 					<div class="msg">
-					</div>
+					</div><br><br><br>
 
 				<img src="img/Tic-Tac-Toe-Game.png" style="height: 100px; margin-bottom: 15px;">
 
