--- a/GUI/game.html
+++ b/GUI/game.html
@@ -9,7 +9,6 @@
 	<script src="js/socket.io.js"></script>
 	<script src="js/sweetalert.min.js"></script>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 
 	<script>
@@ -23,8 +22,8 @@
 	<div class="container rel">
 
 		<div class="nav">
-			<img src="img/Tic-Tac-Toe-Game.png" style="height: 100px; margin-bottom: 15px;">
-			<!-- <h1>TIC TAC TOE</h1> -->
+			
+		 <h1>TIC TAC TOE</h1>
 
 			<div class="end-match">
 				<form action="/end" id="end_match" style="margin-top: 2em;">
@@ -35,7 +34,7 @@
 			</div>
 		</div>
 
-		<div class="row" style="margin-top: 15px;">
+		<div class="row" >
 			<div class="col s3 sidep">
 				<div class="info">
 					<div class="you">
